--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
   <body>
+    <script src="//fast.appcues.com/45361.js"></script>
     <div id="app"></div>
     <script src="/dist/bundle.js"></script>
     <!-- <div>Hello world!</div> -->
