--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,21 @@
 <html>
   <head>
+    <!-- Google tag manager -->
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-WL5MSX6');
+    </script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/styles.css" />  
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
   <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WL5MSX6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="//fast.appcues.com/45361.js"></script>
+    <script> Appcues.identify('Unique-user-id', { name: "John Doe", email: "john.doe@example.com", created_at: 1234567890, /* Additional user properties, is_trial: false, plan: "enterprise" */ }) </script>
     <div id="app"></div>
     <script src="/dist/bundle.js"></script>
     <!-- <div>Hello world!</div> -->
