--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </script>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href="/styles.css" />
-    <link rel="shortcut icon" href="/images/buddy.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/images/new_favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
